c/include/pthread.h

/**
 * pthread_mutex_t — 32 bytes, 8-byte aligned.
 * First 24 bytes: mutex state (TypedMutex / Mutex).
 * Byte 24: kind (0=NORMAL, 1=RECURSIVE, 2=ERRORCHECK).
 *
 * Use a union with an explicit 64-bit member rather than relying on
 * `__attribute__((aligned))` on an opaque typedef. Some consumers embed these
 * opaque pthread types inside other structs, and AArch64 atomic instructions
 * require naturally aligned addresses.
 */
typedef union {
    unsigned char __opaque[32];
    unsigned long long __align;
} pthread_mutex_t;
/**
 * pthread_cond_t — 8 bytes, 8-byte aligned.
 * Wraps sync::Condvar (single AtomicU32, padded to 8 bytes).
 */
typedef union {
    unsigned char __opaque[8];
    unsigned long long __align;
} pthread_cond_t;
/**
 * pthread_rwlock_t — 16 bytes, 8-byte aligned.
 * Wraps sync::RWLock (three AtomicU32 = 12 bytes, padded to 16).
 */
typedef union {
    unsigned char __opaque[16];
    unsigned long long __align;
} pthread_rwlock_t;
/**
 * pthread_barrier_t — 16 bytes, 8-byte aligned.
 * Wraps sync::Barrier (u32 + 2×AtomicU32 = 12 bytes, padded to 16).
 */
typedef union {
    unsigned char __opaque[16];
    unsigned long long __align;
} pthread_barrier_t;
/**
 * pthread_once_t — 8 bytes, 8-byte aligned.
 * Wraps sync::Once (single AtomicU32, padded to 8 bytes).
 */
typedef union {
    unsigned char __opaque[8];
    unsigned long long __align;
} pthread_once_t;
/**
 * pthread_attr_t — 16 bytes.
 * stack_size: u64 (8 bytes) + detach_state: u32 (4 bytes) + pad: u32 (4 bytes).
 */
typedef struct {
    unsigned long long __stack_size;
    unsigned int       __detach_state;
    unsigned int       __pad;
} pthread_attr_t;
/** pthread_mutexattr_t — 4 bytes (kind: i32). */
typedef struct {
    int __kind;
} pthread_mutexattr_t;
/** pthread_condattr_t — 4 bytes (placeholder). */
typedef struct {
    unsigned int __unused;
} pthread_condattr_t;
/** pthread_rwlockattr_t — 4 bytes (placeholder). */
typedef struct {
    unsigned int __unused;
} pthread_rwlockattr_t;
/** pthread_barrierattr_t — 4 bytes (placeholder). */
typedef struct {
    unsigned int __unused;
} pthread_barrierattr_t;
/* Static initializers */
#define PTHREAD_MUTEX_INITIALIZER   { { 0 } }
#define PTHREAD_COND_INITIALIZER    { { 0 } }
#define PTHREAD_RWLOCK_INITIALIZER  { { 0 } }
#define PTHREAD_ONCE_INIT           { { 0 } }