c/rust-bindings/src/saltyos.rs


// pthread opaque types — sizes from pthread_impl.rs
// PthreadAttrT: stack_size(u64) + detach_state(u32) + _pad(u32) = 16 bytes
#[repr(C)]
pub struct pthread_attr_t {
    __private: [u8; 16],
}

// PthreadMutexT: 32 bytes (24 bytes mutex data + kind byte + padding)
#[repr(C, align(8))]
pub struct pthread_mutex_t {
    __private: [u8; 32],
}

// PthreadCondT: 8 bytes
#[repr(C)]
pub struct pthread_cond_t {
    __private: [u8; 8],
}

// PthreadRwlockT: 16 bytes
#[repr(C)]
pub struct pthread_rwlock_t {
    __private: [u8; 16],
}

// PthreadOnceT: 8 bytes
#[repr(C)]
pub struct pthread_once_t {
    __private: [u8; 8],
}

pub const PTHREAD_ONCE_INIT: pthread_once_t = pthread_once_t { __private: [0; 8] };
pub const PTHREAD_MUTEX_INITIALIZER: pthread_mutex_t = pthread_mutex_t { __private: [0; 32] };
pub const PTHREAD_COND_INITIALIZER: pthread_cond_t = pthread_cond_t { __private: [0; 8] };
pub const PTHREAD_RWLOCK_INITIALIZER: pthread_rwlock_t = pthread_rwlock_t { __private: [0; 16] };

// PthreadMutexattrT: kind(i32) = 4 bytes
#[repr(C)]
pub struct pthread_mutexattr_t {
    __private: [u8; 4],
}

// PthreadCondattrT: 4 bytes
#[repr(C)]
pub struct pthread_condattr_t {
    __private: [u8; 4],
}

// PthreadRwlockattrT: 4 bytes
#[repr(C)]
pub struct pthread_rwlockattr_t {
    __private: [u8; 4],
}

// PthreadBarrierT: 16 bytes
#[repr(C)]
pub struct pthread_barrier_t {
    __private: [u8; 16],
}

// PthreadBarrierattrT: 4 bytes
#[repr(C)]
pub struct pthread_barrierattr_t {
    __private: [u8; 4],
}

// rlimit
#[repr(C)]
#[derive(Clone, Copy)]
pub struct rlimit {
    pub rlim_cur: rlim_t,
    pub rlim_max: rlim_t,
}

// dl_phdr_info for dl_iterate_phdr
#[repr(C)]
pub struct dl_phdr_info {
    pub dlpi_addr: u64,
    pub dlpi_name: *const c_char,
    pub dlpi_phdr: *const c_void,
    pub dlpi_phnum: u16,
}

// iovec — from unistd.rs Iovec
#[repr(C)]
#[derive(Clone, Copy)]
pub struct iovec {
    pub iov_base: *mut c_void,
    pub iov_len: size_t,
}

// msghdr
#[repr(C)]
pub struct msghdr {
    pub msg_name: *mut c_void,
    pub msg_namelen: socklen_t,
    pub msg_iov: *mut iovec,
    pub msg_iovlen: size_t,
    pub msg_control: *mut c_void,
    pub msg_controllen: size_t,
    pub msg_flags: c_int,
}

// cmsghdr
#[repr(C)]
pub struct cmsghdr {
    pub cmsg_len: size_t,
    pub cmsg_level: c_int,
    pub cmsg_type: c_int,
}

// fd_set — from select_impl.rs: fds_bits([u64; 16])
#[repr(C)]
#[derive(Clone, Copy)]
pub struct fd_set {
    pub fds_bits: [c_ulong; FD_SETSIZE / 64],
}

// termios — from types.rs Termios
#[repr(C)]
#[derive(Clone, Copy)]
pub struct termios {
    pub c_iflag: u32,
    pub c_oflag: u32,
    pub c_cflag: u32,
    pub c_lflag: u32,
    pub c_line: u8,
    pub c_cc: [u8; NCCS],
    pub c_ispeed: u32,
    pub c_ospeed: u32,
}

// winsize
#[repr(C)]
#[derive(Clone, Copy)]
pub struct winsize {
    pub ws_row: c_ushort,
    pub ws_col: c_ushort,
    pub ws_xpixel: c_ushort,
    pub ws_ypixel: c_ushort,
}

// linger
#[repr(C)]
#[derive(Clone, Copy)]
pub struct linger {
    pub l_onoff: c_int,
    pub l_linger: c_int,
}

// ip_mreq
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ip_mreq {
    pub imr_multiaddr: in_addr,
    pub imr_interface: in_addr,
}

// rusage (stub)
#[repr(C)]
#[derive(Clone, Copy)]
pub struct rusage {
    pub ru_utime: timeval,
    pub ru_stime: timeval,
    pub ru_maxrss: c_long,
    pub ru_ixrss: c_long,
    pub ru_idrss: c_long,
    pub ru_isrss: c_long,
    pub ru_minflt: c_long,
    pub ru_majflt: c_long,
    pub ru_nswap: c_long,
    pub ru_inblock: c_long,
    pub ru_oublock: c_long,
    pub ru_msgsnd: c_long,
    pub ru_msgrcv: c_long,
    pub ru_nsignals: c_long,
    pub ru_nvcsw: c_long,
    pub ru_nivcsw: c_long,
}

// flock
#[repr(C)]
#[derive(Clone, Copy)]
pub struct flock {
    pub l_type: c_short,
    pub l_whence: c_short,
    pub l_start: off_t,
    pub l_len: off_t,
    pub l_pid: pid_t,
}

// passwd
#[repr(C)]
pub struct passwd {
    pub pw_name: *mut c_char,
    pub pw_passwd: *mut c_char,
    pub pw_uid: uid_t,
    pub pw_gid: gid_t,
    pub pw_gecos: *mut c_char,
    pub pw_dir: *mut c_char,
    pub pw_shell: *mut c_char,
}

// group
#[repr(C)]
pub struct group {
    pub gr_name: *mut c_char,
    pub gr_passwd: *mut c_char,
    pub gr_gid: gid_t,
    pub gr_mem: *mut *mut c_char,
}

// utsname
#[repr(C)]
pub struct utsname {
    pub sysname: [c_char; 65],
    pub nodename: [c_char; 65],
    pub release: [c_char; 65],
    pub version: [c_char; 65],
    pub machine: [c_char; 65],
    pub domainname: [c_char; 65],
}

// tm (broken-down time) — from time_impl.rs Tm
#[repr(C)]
#[derive(Clone, Copy)]
pub struct tm {
    pub tm_sec: c_int,
    pub tm_min: c_int,
    pub tm_hour: c_int,
    pub tm_mday: c_int,
    pub tm_mon: c_int,
    pub tm_year: c_int,
    pub tm_wday: c_int,
    pub tm_yday: c_int,
    pub tm_isdst: c_int,
}

// Elf64 types needed by dl_iterate_phdr consumers
pub type Elf64_Half = u16;
pub type Elf64_Word = u32;
pub type Elf64_Xword = u64;
pub type Elf64_Addr = u64;
pub type Elf64_Off = u64;

#[repr(C)]
#[derive(Clone, Copy)]
pub struct Elf64_Phdr {
    pub p_type: Elf64_Word,
    pub p_flags: Elf64_Word,
    pub p_offset: Elf64_Off,
    pub p_vaddr: Elf64_Addr,
    pub p_paddr: Elf64_Addr,
    pub p_filesz: Elf64_Xword,
    pub p_memsz: Elf64_Xword,
    pub p_align: Elf64_Xword,
}

// posix_spawn types (opaque)
pub enum posix_spawn_file_actions_t {}
pub enum posix_spawnattr_t {}

// =========================================================================
// Extern "C" function declarations
// =========================================================================

unsafe extern "C" {
    // --- errno ---
    pub fn __errno_location() -> *mut c_int;

    // --- Memory ---
    pub fn malloc(size: size_t) -> *mut c_void;
    pub fn calloc(nobj: size_t, size: size_t) -> *mut c_void;
    pub fn realloc(ptr: *mut c_void, size: size_t) -> *mut c_void;
    pub fn free(ptr: *mut c_void);
    pub fn posix_memalign(memptr: *mut *mut c_void, align: size_t, size: size_t) -> c_int;
    pub fn aligned_alloc(align: size_t, size: size_t) -> *mut c_void;
    pub fn memalign(align: size_t, size: size_t) -> *mut c_void;

    // --- String ---
    pub fn strlen(s: *const c_char) -> size_t;
    pub fn strnlen(s: *const c_char, maxlen: size_t) -> size_t;
    pub fn strcpy(dst: *mut c_char, src: *const c_char) -> *mut c_char;
    pub fn strncpy(dst: *mut c_char, src: *const c_char, n: size_t) -> *mut c_char;
    pub fn strcat(dst: *mut c_char, src: *const c_char) -> *mut c_char;
    pub fn strncat(dst: *mut c_char, src: *const c_char, n: size_t) -> *mut c_char;
    pub fn strcmp(s1: *const c_char, s2: *const c_char) -> c_int;
    pub fn strncmp(s1: *const c_char, s2: *const c_char, n: size_t) -> c_int;
    pub fn strchr(s: *const c_char, c: c_int) -> *mut c_char;
    pub fn strrchr(s: *const c_char, c: c_int) -> *mut c_char;
    pub fn strstr(haystack: *const c_char, needle: *const c_char) -> *mut c_char;
    pub fn strtok_r(
        s: *mut c_char,
        delim: *const c_char,
        saveptr: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn strtol(s: *const c_char, endp: *mut *mut c_char, base: c_int) -> c_long;
    pub fn strtoul(s: *const c_char, endp: *mut *mut c_char, base: c_int) -> c_ulong;
    pub fn strtoll(s: *const c_char, endp: *mut *mut c_char, base: c_int) -> c_longlong;
    pub fn strtoull(s: *const c_char, endp: *mut *mut c_char, base: c_int) -> c_ulonglong;
    pub fn strtof(s: *const c_char, endp: *mut *mut c_char) -> c_float;
    pub fn strtod(s: *const c_char, endp: *mut *mut c_char) -> c_double;
    pub fn memcpy(dst: *mut c_void, src: *const c_void, n: size_t) -> *mut c_void;
    pub fn memmove(dst: *mut c_void, src: *const c_void, n: size_t) -> *mut c_void;
    pub fn memset(s: *mut c_void, c: c_int, n: size_t) -> *mut c_void;
    pub fn memcmp(s1: *const c_void, s2: *const c_void, n: size_t) -> c_int;
    pub fn memchr(s: *const c_void, c: c_int, n: size_t) -> *mut c_void;
    pub fn strdup(s: *const c_char) -> *mut c_char;
    pub fn strndup(s: *const c_char, n: size_t) -> *mut c_char;
    pub fn strerror(errnum: c_int) -> *mut c_char;
    pub fn strerror_r(errnum: c_int, buf: *mut c_char, buflen: size_t) -> c_int;
    pub fn strsignal(sig: c_int) -> *mut c_char;
    pub fn strcasecmp(s1: *const c_char, s2: *const c_char) -> c_int;
    pub fn strncasecmp(s1: *const c_char, s2: *const c_char, n: size_t) -> c_int;
    pub fn stpcpy(dst: *mut c_char, src: *const c_char) -> *mut c_char;
    pub fn stpncpy(dst: *mut c_char, src: *const c_char, n: size_t) -> *mut c_char;
    pub fn strspn(s: *const c_char, accept: *const c_char) -> size_t;
    pub fn strcspn(s: *const c_char, reject: *const c_char) -> size_t;
    pub fn strpbrk(s: *const c_char, accept: *const c_char) -> *mut c_char;
    pub fn strtoimax(s: *const c_char, endp: *mut *mut c_char, base: c_int) -> isize;
    pub fn strtoumax(s: *const c_char, endp: *mut *mut c_char, base: c_int) -> usize;
    pub fn memrchr(s: *const c_void, c: c_int, n: size_t) -> *mut c_void;
    pub fn explicit_bzero(s: *mut c_void, n: size_t);
    pub fn bcmp(s1: *const c_void, s2: *const c_void, n: size_t) -> c_int;
